Replace apache commons method by native method
Signed-off-by: Olivier Marceau <hollysaiqs@marceau.ovh>